--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,37 @@
   </head>
   <body ng-cloak>
 
-    <div class="container" ng-controller="mapController">
-      <heatmap id="heatmap-1" data="heatmapData" config="heatmapConfig"></heatmap>
+    <div class="container" ng-controller="mapController as vm">
+      <div>
+        <div id="panel">
+          <button ng-click="vm.toggleHeatmap()">Toggle Heatmap</button>
+          <button ng-click="vm.changeGradient()">Change gradient</button>
+          <button ng-click="vm.changeRadius()">Change radius</button>
+          <button ng-click="vm.changeOpacity()">Change opacity</button>
+        </div>
+        <ng-map zoom="11" center="39.742043, -104.991531" map-type-id="hybrid">
+          <heatmap-layer id="foo" data="permitData"></heatmap-layer>
+          <kml-layer url="">
+          </kml-layer>
+        </ng-map>
+      </div>
     </div>
     <!-- scripts -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=visualization"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
-    <!-- Heat Map -->
-    <script type="text/javascript" src="js/heatmap.js"></script>
-    <script type="text/javascript" src="js/angular-heatmap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.js"></script>
+    <script type="text/javascript" src="js/angular-simple-logger.js"></script>
+
+    <!-- Google Map Angular-->
+    <script type="text/javascript" src="js/heat-layer.js"></script>
+    <script type="text/javascript" src="js/angular-google-maps.js"></script>
+    <script type="text/javascript" src="js/ng-map.js"></script>
     <!-- App -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
+
     <!-- main component -->
     <script type="text/javascript" src="js/components/main/main.controller.js"></script>
     <script type="text/javascript" src="js/components/map/map.controller.js"></script>
