--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="container" ng-controller="mapController as vm">
+    <div class="container">
       <div>
         <!-- <ng-map zoom="10" center="40.0072998696373, -105.13449896240235" map-type-id="hybrid"> -->
           <!-- <heatmap-layer id="foo" data="permitData"></heatmap-layer> -->
@@ -64,18 +64,54 @@
             heatmap = '{enabled: true}'>
           </fusion-tables-layer>
         </ng-map> -->
-        <ui-gmap-google-map
+        <!-- <ui-gmap-google-map
           center="vm.map.center"
           zoom="vm.map.zoom"
           control="vm.map.control"
-          options="vm.map.options">
+          options="vm.map.options"
+          refresh="vm.refresh">
           <ui-gmap-layer
             type="FusionTablesLayer"
             options="vm.map.fusionlayer.options"
             show="true">
           </ui-gmap-layer>
-        </ui-gmap-google-map>
-        <div style="margin-top: 10px;">
+        </ui-gmap-google-map> -->
+        <div id="map-canvas"></div>
+    <div style="margin-top: 10px;">
+      <label class="search">
+        City
+        <select id="search-string_0" onchange="changeMap_0(this.value);">
+          <option value="--Select--">--Select--</option>
+          <option value="">(no value)</option>
+          <option value="ALLENSPARK">ALLENSPARK</option>
+          <option value="BERTHOUD">BERTHOUD</option>
+          <option value="BOULDER">BOULDER</option>
+          <option value="BOULER">BOULER</option>
+          <option value="BROOMFIELD">BROOMFIELD</option>
+          <option value="ELDORA">ELDORA</option>
+          <option value="ELDORADO SPRINGS">ELDORADO SPRINGS</option>
+          <option value="ERIE">ERIE</option>
+          <option value="GOLD HILL">GOLD HILL</option>
+          <option value="GOLDEN">GOLDEN</option>
+          <option value="HYGIENE">HYGIENE</option>
+          <option value="JAMESTON">JAMESTON</option>
+          <option value="JAMESTOWN">JAMESTOWN</option>
+          <option value="LAFAYETTE">LAFAYETTE</option>
+          <option value="LONGMONT">LONGMONT</option>
+          <option value="LOUISVILLE">LOUISVILLE</option>
+          <option value="LYONS">LYONS</option>
+          <option value="MOUNTAINS">MOUNTAINS</option>
+          <option value="NEDERLAND">NEDERLAND</option>
+          <option value="NIWOT">NIWOT</option>
+          <option value="PINECLIFFE">PINECLIFFE</option>
+          <option value="RAYMOND">RAYMOND</option>
+          <option value="SUPERIOR">SUPERIOR</option>
+          <option value="UNINCORPORATED">UNINCORPORATED</option>
+          <option value="WARD">WARD</option>
+        </select>
+      </label>
+    </div>
+        <!-- <div style="margin-top: 10px;">
         <label class="citySelect">
           City
           <select ng-model="vm.city" id="search-string-city" ng-change="vm.changeCityMap(this.value);">
@@ -85,7 +121,6 @@
          </select>
         </label>
         </div>
-        City: {{vm.city}}
         <div class="row" id="panel">
           <button class="btn btn-raised col-sm-6 col-md-2" ng-click="vm.toggleHeatmap()">Heatmap</button>
           <button class="btn btn-raised col-sm-6 col-md-2 col-md-offset-1" ng-click="vm.changeGradient()">Gradient</button>
@@ -93,7 +128,7 @@
           <button class="btn btn-raised col-sm-6 col-md-2 col-md-offset-1" ng-click="vm.changeOpacity()">Opacity</button>
         </div>
       </div>
-    </div>
+    </div> -->
     <footer class="footer">
       <div class="container-fluid bg-warning">
         <p>
@@ -104,25 +139,23 @@
       </div>
     </footer>
     <!-- scripts -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=visualization"></script>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.js"></script>
-    <script type="text/javascript" src="js/angular-simple-logger.js"></script>
     <!-- Material BootStrap -->
     <script type="text/javascript" src="js/material.js"></script>
     <script type="text/javascript" src="js/ripples.js"></script>
-    <!-- Google Map Angular-->
-    <script type="text/javascript" src="js/heat-layer.js"></script>
-    <script type="text/javascript" src="js/angular-google-maps.js"></script>
-    <script type="text/javascript" src="js/ng-map.js"></script>
     <!-- App -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
+    <!-- map -->
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3&amp;libraries=visualization"></script>
+    <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=ftOnLoadClientApi">
+    </script>
+    <script type="text/javascript" src="js/map.js"></script>
     <!-- main component -->
     <script type="text/javascript" src="js/components/main/main.controller.js"></script>
-    <script type="text/javascript" src="js/components/map/map.controller.js"></script>
     <script src="https://use.fontawesome.com/535058757b.js"></script>
   </body>
 </html>
