--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="/css/bootstrap-material-design.css" media="screen" title="no title">
     <link rel="stylesheet" href="/css/ripples.css" media="screen" title="no title">
+    <link href="saved/icon.png" rel="icon" type="image/x-icon" />
   </head>
   <body ng-cloak>
+    <div class="item">
+      <img class-"img-fluid" src="saved/image2.jpg" alt="House">
+      <input type="text" name="address" value="" placeholder="1111 Someplace RD Boulder CO 80510">
+      </img>
+    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-warning">
       <div class="container-fluid">
@@ -77,6 +83,9 @@
           <div id="map-canvas"></div>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <iframe width="500" height="300" scrolling="yes" frameborder="yes" src="https://fusiontables.google.com/embedviz?containerId=googft-gviz-canvas&amp;q=select+col4%2C+SUM(col39)+from+1mL-eAHwaUdf_rJ6KQm0NSQF8BcS900n8PGEc-xwg+group+by+col4+order+by+SUM(col39)+asc+limit+15&amp;viz=GVIZ&amp;t=PIE&amp;uiversion=2&amp;gco_forceIFrame=true&amp;gco_hasLabelsColumn=true&amp;width=500&amp;height=300"></iframe>
     </div>
 
     <footer class="footer">
