--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <div class="item transparent" id="splash">
       <img class="img-fluid" src="saved/image2.jpg" alt="House" id="splash-img">
         <div class="form-group label-static" id="splash-input">
+          <input class="" type="text" name="name" value="" id="auto-input" placeholder="Address">
           <input type="button" name="name" value="Start" id="splash-btn" class="btn btn-raised btn-danger">
         </div>
       </img>
@@ -116,7 +117,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <!-- map -->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3&amp;libraries=visualization"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3&amp;libraries=visualization,places&amp;key=AIzaSyDd4dbNcsmcldfq6X8yzCfidMera_KTZDc"></script>
     <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=ftOnLoadClientApi">
     </script>
     <script type="text/javascript" src="js/map.js"></script>
