--- a/src/index.html
+++ b/src/index.html
@@ -49,43 +49,51 @@
               <h3 class="panel-title">Map Controls</h3>
             </div>
             <div class="panel-body">
-              <label class="search">
-                City
-                <select id="search-string_0" onchange="changeMap_0(this.value);">
-                  <option value="--Select--">--Select--</option>
-                  <option value="">(no value)</option>
-                  <option value="ALLENSPARK">ALLENSPARK</option>
-                  <option value="BERTHOUD">BERTHOUD</option>
-                  <option value="BOULDER">BOULDER</option>
-                  <option value="BROOMFIELD">BROOMFIELD</option>
-                  <option value="ELDORA">ELDORA</option>
-                  <option value="ELDORADO SPRINGS">ELDORADO SPRINGS</option>
-                  <option value="ERIE">ERIE</option>
-                  <option value="GOLD HILL">GOLD HILL</option>
-                  <option value="GOLDEN">GOLDEN</option>
-                  <option value="HYGIENE">HYGIENE</option>
-                  <option value="JAMESTOWN">JAMESTOWN</option>
-                  <option value="LAFAYETTE">LAFAYETTE</option>
-                  <option value="LONGMONT">LONGMONT</option>
-                  <option value="LOUISVILLE">LOUISVILLE</option>
-                  <option value="LYONS">LYONS</option>
-                  <option value="MOUNTAINS">MOUNTAINS</option>
-                  <option value="NEDERLAND">NEDERLAND</option>
-                  <option value="NIWOT">NIWOT</option>
-                  <option value="PINECLIFFE">PINECLIFFE</option>
-                  <option value="RAYMOND">RAYMOND</option>
-                  <option value="SUPERIOR">SUPERIOR</option>
-                  <option value="UNINCORPORATED">UNINCORPORATED</option>
-                  <option value="WARD">WARD</option>
-                </select>
-              </label>
-              <label class="search">
-                Date
-                <input id="when" name="when" type="month" onchange="changeMap_0(this.value);">
-              </label>
+              <div class="row">
+                <div class="col-md-offset-1">
+                  <label class="search">
+                    City&nbsp;&nbsp;
+                    <select id="search-string_0" onchange="changeMap_0(this.value);">
+                      <option value="">--Select--</option>
+                      <option value="">(no value)</option>
+                      <option value="ALLENSPARK">ALLENSPARK</option>
+                      <option value="BERTHOUD">BERTHOUD</option>
+                      <option value="BOULDER">BOULDER</option>
+                      <option value="BROOMFIELD">BROOMFIELD</option>
+                      <option value="ELDORA">ELDORA</option>
+                      <option value="ELDORADO SPRINGS">ELDORADO SPRINGS</option>
+                      <option value="ERIE">ERIE</option>
+                      <option value="GOLD HILL">GOLD HILL</option>
+                      <option value="GOLDEN">GOLDEN</option>
+                      <option value="HYGIENE">HYGIENE</option>
+                      <option value="JAMESTOWN">JAMESTOWN</option>
+                      <option value="LAFAYETTE">LAFAYETTE</option>
+                      <option value="LONGMONT">LONGMONT</option>
+                      <option value="LOUISVILLE">LOUISVILLE</option>
+                      <option value="LYONS">LYONS</option>
+                      <option value="MOUNTAINS">MOUNTAINS</option>
+                      <option value="NEDERLAND">NEDERLAND</option>
+                      <option value="NIWOT">NIWOT</option>
+                      <option value="PINECLIFFE">PINECLIFFE</option>
+                      <option value="RAYMOND">RAYMOND</option>
+                      <option value="SUPERIOR">SUPERIOR</option>
+                      <option value="UNINCORPORATED">UNINCORPORATED</option>
+                      <option value="WARD">WARD</option>
+                    </select>
+                  </label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-offset-1">
+                  <label class="search">
+                    Date
+                    <input id="when" name="when" type="month" onchange="changeMap_0(this.value);">
+                  </label>
+                </div>
+              </div>
             </div>
             <div class="row" id="buttons">
-              <div class="togglebutton col-sm-12 col-md-5">
+              <div class="togglebutton col-sm-12 col-md-5 col-md-offset-1">
                 <label>
                   <input type="checkbox" checked="" id="Heatmap"> Heatmap
                 </label>
@@ -95,7 +103,7 @@
                   <input type="checkbox" checked="" id="Gradient"> Gradient
                 </label>
               </div>
-              <div class="togglebutton col-sm-12 col-md-5">
+              <div class="togglebutton col-sm-12 col-md-5 col-md-offset-1">
                 <label>
                   <input type="checkbox" checked="" id="Radius"> Radius
                 </label>
@@ -106,17 +114,9 @@
                 </label>
               </div>
             </div>
-            <div class="row" id="zillow">
-              <div class="col-xs-12">
-                Adress: <span id="address"></span>
-              </div>
-              <div class="col-xs-12">
-                Zillow Price:<span id="zillow-price"></span>
-              </div>
-            </div>
+            <div id="chart"></div>
           </div>
         </div>
-
         <div class="col-md-8 col-sm-12">
           <div id="map-canvas"></div>
         </div>
@@ -147,7 +147,8 @@
     <!-- App -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
-    <!-- map -->
+    <!-- map/chart -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3&amp;libraries=visualization,places&amp;key=AIzaSyDd4dbNcsmcldfq6X8yzCfidMera_KTZDc"></script>
     <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=ftOnLoadClientApi">
     </script>
