--- a/src/index.html
+++ b/src/index.html
@@ -115,10 +115,28 @@
               </div>
             </div>
             <div id="chart"></div>
+            <div id="piechart"></div>
           </div>
         </div>
         <div class="col-md-8 col-sm-12">
           <div id="map-canvas"></div>
+          <div id="legend" style="border:none; box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+          z-index: 1;">
+            <div class="text-center">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+            <div id="legendGradient"
+            style="
+            width:10px;
+            height:100px;
+            box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+            z-index: 1;">
+          </div>
+            <div class="text-center">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
